fix(list): adjust spacing for content items

--- a/packages/components/src/components/bal-list/bal-list.scss
+++ b/packages/components/src/components/bal-list/bal-list.scss
@@ -72,6 +72,7 @@
 
 .bal-list-item-content {
   justify-content: center;
+  gap: 4px;
 }
 
 .bal-list-item-icon {
